--- a/index.html
+++ b/index.html
@@ -1,15 +1,43 @@
 <!DOCTYPE html>
-
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="./styles.css">
-        <title>PaintingJs</title>
-    </head>
-    <body>  
-
-        <script src="./app.js"></script>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+    <link rel="stylesheet" href="styles.css" />
+    <title>PaintJS</title>
+  </head>
+  <body>
+    <canvas id="jsCanvas" class="canvas" height="360" width="560" ></canvas>
+    <div class="controlswithbtns">
+        <div class="controls">
+            <input type="range" id="jsrange" max="5" min="0.1" value="2.5" step="0.1" >
+            <div class="controls__colors" id="jsColors">
+                <div class="controls__color" style="background-color:#2c2c2c"></div>
+                <div class="controls__color" style="background-color:white"></div>
+                <div class="controls__color" style="background-color:#FF3B30"></div>
+                <div class="controls__color" style="background-color:#FF9500"></div>
+                <div class="controls__color" style="background-color:#FFCC00"></div>
+                <div class="controls__color" style="background-color:#4CD963"></div>
+                <div class="controls__color" style="background-color:#5AC8FA"></div>
+                <div class="controls__color" style="background-color:#0579FF"></div>
+                <div class="controls__color" style="background-color:#5856D6"></div>
+                <span class="material-icons" id="fill">
+                    format_color_fill
+                </span>
+                <span class="material-icons" id="brush">
+                        brush
+                </span>
+            </div>
+        </div>
+        <div class="btns">
+        
+            <button id="reset_btn"  class="reset_btn">Reset</button>
+            <button id="save_btn"  class="save_btn">Save</button>
+        </div>
+    </div>
+    <script src="app.js"></script>
+  </body>
 </html>
